# setup_files

./: .tmux.conf  .vimrc  .zshrc  CMakeLists.txt  README.md  aziktable.txt  install_script.sh  install_script2.sh  ros_install.sh  turtlebot_install.sh
vimrc_setting/userautoload/: README.txt
vimrc_setting/userautoload/plugins/: plugin-caw.vim  plugin-clang-complete.vim  plugin-lightline.vim  plugin-neocomplete.vim  plugin-neosnippet.vim  plugin-seiya.vim  plugin-unite.vim  plugin-vim-clang-format.vim  plugin-vim-over.vim  plugin-vim-quickrun.vim  plugin-vim-snowdrop.vim  plugin-vimfiler.vim
vimrc_setting/userautoload/vimrc_init/: basic.vim  color.vim  mapping.vim  plugins.vim
